# zephyr

./: .editorconfig  west.yml
boards/arm/nucleo_g0b1re/: nucleo_g0b1re.dts
cmake/: mcuboot.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: adc_stm32.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.at45  spi_flash_at45.c  spi_flash_en25.c
drivers/lora/: CMakeLists.txt  Kconfig  Kconfig.lora_at  lora_at.c  lora_context.c  lora_context.h
drivers/modem/: Kconfig.gsm  Kconfig.quectel  gsm_ppp.c  gsm_ppp.h  hl7800.c  modem_cmd_handler.h  modem_iface_uart.h
drivers/rtc/: CMakeLists.txt  Kconfig  Kconfig.stm32  rtc_ll_stm32.c  rtc_ll_stm32.c.bak
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/bgt3001/: CMakeLists.txt  Kconfig  bgt3001.c  bgt3001.h
drivers/sensor/dps368/: CMakeLists.txt  Kconfig  dps368.c
drivers/sensor/ds18b20/: Kconfig  ds18b20.c  ds18b20.h
drivers/sensor/dypa01/: CMakeLists.txt  Kconfig  dypa01.bak  dypa01.c  dypa01.h
drivers/sensor/gp2y10/: CMakeLists.txt  Kconfig  gp2y10.c  gp2y10.h
drivers/sensor/htu31d/: CMakeLists.txt  Kconfig  htu31d.c  (+1 more)
drivers/serial/: uart_stm32.bak  uart_stm32.bakc  uart_stm32.c  uart_stm32.h
drivers/spi/: spi_ll_stm32.c
include/drivers/: lora_at.h  rtc.h  sensor.h
include/modbus/: modbus.h
include/net/: net_context.h  net_if.h
include/sys/: util.h
kernel/: fatal.c  sched.c
lib/os/: heap.c
samples/hello_world/: prj.conf
samples/vmszs/: CMakeLists.txt
subsys/modbus/: modbus_serial.c  modbus_server.c
subsys/net/: Kconfig
subsys/shell/: shell_log_backend.c  shell_mqtt.c
(+135 files in other folders)
